--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,9 @@
-@book{ruby,
-  title     = {The Ruby Programming Language},
-  author    = {Flanagan, David and Matsumoto, Yukihiro},
-  year      = {2018},
-  publisher = {O'Reilly Media}
+@inproceedings{norlund2021,
+    title = {Transfering Knowledge from Vision to Language: How to Achieve it and how to Measure it?},
+    booktitle = {Proceedings of the Fourth BlackboxNLP Workshop on Analyzing and Interpreting Neural Networks for NLP},
+    author = {Tobias Norlund and Lovisa Hagstr\"{o}m and Richard Johansson},
+    year = {2021},
+    date = {November 11},
+    pages = {149-162},
+    address = {Punta Cana, Dominican Republic},
 }
