Fix bib template

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,4 +1,4 @@
-@inproceedings{norlund2021,
+@article{norlund2021,
     title = {Transfering Knowledge from Vision to Language: How to Achieve it and how to Measure it?},
     booktitle = {Proceedings of the Fourth BlackboxNLP Workshop on Analyzing and Interpreting Neural Networks for NLP},
     author = {Tobias Norlund and Lovisa Hagstr\"{o}m and Richard Johansson},
